<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <CheckBoxPreference
        android:key="@string/check_box_key"
        android:title="@string/check_box_label"
        android:defaultValue="@bool/check_box_default_value"
        android:summaryOn="@string/check_box_summary_on"
        android:summaryOff="@string/check_box_summary_off" />

    <ListPreference
        android:key="@string/list_key"
        android:title="@string/list_label"
        android:defaultValue="@string/list_red_value"
        android:entries="@array/list_labels"
        android:entryValues="@array/list_entry_values" />

    <EditTextPreference
        android:key="@string/edit_text_key"
        android:title="@string/edit_text_label"
        android:defaultValue="@string/edit_text_default_value" />

</PreferenceScreen>